SGD8-2635: Fix breadcrumbs wrapping

--- a/components/31-molecules/breadcrumbs/_breadcrumbs.scss
+++ b/components/31-molecules/breadcrumbs/_breadcrumbs.scss
@@ -4,6 +4,7 @@
 
   ul,
   ol {
+    flex-wrap: wrap;
     max-width: 100%;
     margin: 0;
     list-style: none;
